--- a/samples/horizontal-line.html
+++ b/samples/horizontal-line.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Scatter Chart</title>
-    <script src="../node_modules/chart.js/dist/Chart.bundle.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.bundle.min.js"></script>
     <script src="../Chart.Annotation.js"></script>
     <style>
     canvas {
@@ -133,7 +133,8 @@
                             scaleID: 'y-axis-1',
                             value: '25',
                             borderColor: 'black',
-                            borderWidth: 5
+                            borderWidth: 5,
+							label: 'This is a Custom Label'
                         }]
                     }
                 }
