Changes annotation to be more of a badge, than side label, so that is doesn't overlap data.

--- a/samples/horizontal-line.html
+++ b/samples/horizontal-line.html
@@ -131,10 +131,10 @@
                             type: 'line',
                             mode: 'horizontal',
                             scaleID: 'y-axis-1',
-                            value: '25',
+                            value: 45,
                             borderColor: 'black',
                             borderWidth: 5,
-							label: 'This is a Custom Label'
+							label: '%B: 45%'
                         }]
                     }
                 }
