Fixed #28, fixes #15, fixes #1
Added a new option to the annotation plugin to allow configuration of
when the annotations should be drawn.
Documentation has been updated to reflect this, have also run `gulp
build`

--- a/samples/box.html
+++ b/samples/box.html
@@ -127,6 +127,7 @@
                         }]
                     },
                     annotation: {
+                        drawTime: "beforeDatasetsDraw",
                         annotations: [{
                             type: 'box',
                             xScaleID: 'x-axis-1',
