--- a/samples/horizontal-line.html
+++ b/samples/horizontal-line.html
@@ -127,6 +127,7 @@
                         }]
                     },
                     annotation: {
+                        drawTime: "beforeDatasetsDraw",
                         annotations: [{
                             type: 'line',
                             mode: 'horizontal',
