Fixed calculations as per comments
Moved rendering calculations to lineUpdate function, also fixed a minor
reference bug that prevented animations from working at all.

--- a/samples/labels.html
+++ b/samples/labels.html
@@ -131,7 +131,7 @@
                             type: 'line',
                             mode: 'horizontal',
                             scaleID: 'y-axis-1',
-                            value: '25',
+                            value: 25,
                             borderColor: 'black',
                             borderWidth: 5,
                             label: {
@@ -144,7 +144,7 @@
                             type: 'line',
                             mode: 'vertical',
                             scaleID: 'x-axis-1',
-                            value: '25',
+                            value: 25,
                             borderColor: 'red',
                             borderWidth: 5,
                             label: {
