Fixed sample post-update

--- a/samples/labels.html
+++ b/samples/labels.html
@@ -4,7 +4,7 @@
 <head>
     <title>Scatter Chart</title>
     <script src="../node_modules/chart.js/dist/Chart.bundle.js"></script>
-    <script src="../Chart.Annotation.js"></script>
+    <script src="../chartjs-plugin-annotation.js"></script>
     <style>
     canvas {
         -moz-user-select: none;
@@ -132,6 +132,7 @@
                             mode: 'horizontal',
                             scaleID: 'y-axis-1',
                             value: 25,
+                            endValue: 45,
                             borderColor: 'black',
                             borderWidth: 5,
                             label: {
