Better label positioning (#31)
Labels should track with the line slope, and should not fall out of the edge of the canvas.

--- a/samples/labels.html
+++ b/samples/labels.html
@@ -132,10 +132,10 @@
                             mode: 'horizontal',
                             scaleID: 'y-axis-1',
                             value: 25,
-                            endValue: 45,
                             borderColor: 'black',
                             borderWidth: 5,
                             label: {
+                                yAdjust: -20,
                                 backgroundColor: "red",
                                 content: "This is a long test label",
                                 enabled: true
@@ -146,11 +146,12 @@
                             mode: 'vertical',
                             scaleID: 'x-axis-1',
                             value: 25,
+                            endValue: 45,
                             borderColor: 'red',
                             borderWidth: 5,
                             label: {
-                                position: "top",
-                                yAdjust: 15,
+                                position: "bottom",
+                                yAdjust: 100,
                                 content: "This is a another test label",
                                 enabled: true
                             }
