--- a/samples/horizontal-line.html
+++ b/samples/horizontal-line.html
@@ -127,12 +127,11 @@
                         }]
                     },
                     annotation: {
-                        drawTime: "afterDraw",
                         annotations: [{
                             type: 'line',
                             mode: 'horizontal',
                             scaleID: 'y-axis-1',
-                            value: '25',
+                            value: 120,
                             borderColor: 'black',
                             borderWidth: 5
                         }]
