--- a/samples/labels.html
+++ b/samples/labels.html
@@ -109,7 +109,9 @@
                             },
                             ticks: {
                                 maxRotation: 0,
-                                reverse: true
+                                reverse: true,
+                                //min: -100,
+                                //max: 0
                             }
                         }],
                         yAxes: [{
@@ -122,7 +124,9 @@
                                 labelString: 'y axis'
                             },
                             ticks: {
-                                reverse: true
+                                reverse: true,
+                                //min: -100,
+                                //max: 0
                             }
                         }]
                     },
