--- a/samples/labels.html
+++ b/samples/labels.html
@@ -131,6 +131,7 @@
                         }]
                     },
                     annotation: {
+                        events: ['click'],
                         annotations: [{
                             type: 'line',
                             mode: 'horizontal',
@@ -143,6 +144,10 @@
                                 backgroundColor: "red",
                                 content: "This is a long test label",
                                 enabled: true
+                            },
+                            onClick: function(e) {
+                                // The annotation is is bound to the `this` variable
+                                console.log('Annotation', e.type, this);
                             }
                         },
                         {
@@ -158,6 +163,10 @@
                                 yAdjust: 100,
                                 content: "This is a another test label",
                                 enabled: true
+                            },
+                            onClick: function(e) {
+                                // The annotation is is bound to the `this` variable
+                                console.log('Annotation', e.type, this);
                             }
                         }]
                     }
