--- a/samples/horizontal-line.html
+++ b/samples/horizontal-line.html
@@ -127,22 +127,41 @@
                         }]
                     },
                     annotation: {
-                        events: ['click'],
+                        events: ['click', 'dblclick', 'mouseover', 'mouseout'],
                         annotations: [{
                             type: 'line',
                             mode: 'horizontal',
                             scaleID: 'y-axis-1',
                             value: 120,
-                            borderColor: 'black',
-                            borderWidth: 5,
+                            borderColor: 'rgba(255, 0, 0, 0.5)',
+                            borderWidth: 2,
                             onClick: function(e) {
-                                // The annotation is is bound to the `this` variable
-                                alert('Annotation ' + e.type);
+                                this._model.borderColor = 'rgba(255, 0, 0, 1.0)';
+                                this.chartInstance.render(0);
+                                setTimeout((function() {
+                                    this._model.borderColor = 'rgba(255, 0, 0, 0.5)';
+                                    this.chartInstance.render(0);
+                                }).bind(this), 500);
+                            },
+                            onDblclick: function(e) {
+                                this._model.borderColor = 'rgba(0, 255, 0, 1.0)';
+                                this.chartInstance.render(0);
+                                setTimeout((function() {
+                                    this._model.borderColor = 'rgba(255, 0, 0, 0.5)';
+                                    this.chartInstance.render(0);
+                                }).bind(this), 500);
+                            },
+                            onMouseover: function(e) {
+                                this._model.borderWidth = 7;
+                                this.chartInstance.render(0);
+                                this.chartInstance.chart.canvas.style.cursor = 'pointer';
+                            },
+                            onMouseout: function(e) {
+                                this._model.borderWidth = 5;
+                                this.chartInstance.render(0);
+                                this.chartInstance.chart.canvas.style.cursor = 'initial';
                             }
                         }]
-                    },
-                    onClick: function(e, annotation) {
-                        alert('Chart ' + e.type);
                     }
                 }
             });
