--- a/samples/labels.html
+++ b/samples/labels.html
@@ -133,6 +133,7 @@
                     annotation: {
                         events: ['click'],
                         annotations: [{
+                            id: 'hline',
                             type: 'line',
                             mode: 'horizontal',
                             scaleID: 'y-axis-1',
@@ -151,6 +152,7 @@
                             }
                         },
                         {
+                            id: 'vline',
                             type: 'line',
                             mode: 'vertical',
                             scaleID: 'x-axis-1',
