Allow overriding `drawTime` per-annotation
Resolves #52

--- a/samples/bar.html
+++ b/samples/bar.html
@@ -113,6 +113,7 @@
                                 console.log('Annotation', e.type, this);
                             }
                         }, {
+                            drawTime: 'beforeDatasetsDraw',
                             type: 'box',
                             xScaleID: 'x-axis-0',
                             yScaleID: 'y-axis-0',
