More flexible positioning of boxes
Allows to configure box coordinates with a two tuple array. The
box will be drawn at the average pixel position. This allows the
more flexible placement of boxes in a category scale.

--- a/samples/bar.html
+++ b/samples/bar.html
@@ -118,7 +118,7 @@
                             xScaleID: 'x-axis-0',
                             yScaleID: 'y-axis-0',
                             xMin: 'February',
-                            xMax: 'April',
+                            xMax: ['April', 'May'],
                             yMin: randomScalingFactor(),
                             yMax: randomScalingFactor(),
                             backgroundColor: 'rgba(101, 33, 171, 0.5)',
