--- a/samples/polar-area.html
+++ b/samples/polar-area.html
@@ -49,11 +49,11 @@
 				label: 'My dataset' // for legend
 			}],
 			labels: [
-				"Red",
-				"Orange",
-				"Yellow",
-				"Green",
-				"Blue"
+				'Red',
+				'Orange',
+				'Yellow',
+				'Green',
+				'Blue'
 			]
 		},
 		options: {
@@ -98,7 +98,7 @@
 	};
 
 	window.onload = function() {
-		var ctx = document.getElementById("chart-area");
+		var ctx = document.getElementById('chart-area');
 		window.myPolarArea = Chart.PolarArea(ctx, config);
 	};
 
