--- a/samples/horizontal-line.html
+++ b/samples/horizontal-line.html
@@ -30,7 +30,7 @@
 
 		var scatterChartData = {
 			datasets: [{
-				label: "My First dataset",
+				label: 'My First dataset',
 				data: [{
 					x: randomScalingFactor(),
 					y: randomScalingFactor(),
@@ -54,7 +54,7 @@
 					y: randomScalingFactor(),
 				}]
 			}, {
-				label: "My Second dataset",
+				label: 'My Second dataset',
 				data: [{
 					x: randomScalingFactor(),
 					y: randomScalingFactor(),
@@ -89,7 +89,7 @@
 		});
 
 		window.onload = function() {
-			var ctx = document.getElementById("canvas").getContext("2d");
+			var ctx = document.getElementById('canvas').getContext('2d');
 			window.myScatter = Chart.Scatter(ctx, {
 				data: scatterChartData,
 				options: {
@@ -101,7 +101,7 @@
 						xAxes: [{
 							position: 'top',
 							gridLines: {
-								zeroLineColor: "rgba(0,255,0,1)"
+								zeroLineColor: 'rgba(0,255,0,1)'
 							},
 							scaleLabel: {
 								display: true,
@@ -115,7 +115,7 @@
 						yAxes: [{
 							position: 'right',
 							gridLines: {
-								zeroLineColor: "rgba(0,255,0,1)"
+								zeroLineColor: 'rgba(0,255,0,1)'
 							},
 							scaleLabel: {
 								display: true,
