--- a/samples/line-time-scale.html
+++ b/samples/line-time-scale.html
@@ -38,10 +38,6 @@
 			return moment().add(days, 'd').format(timeFormat);
 		}
 
-		function newTimestamp(days) {
-			return moment().add(days, 'd').unix();
-		}
-
 		var color = Chart.helpers.color;
 		var config = {
 			type: 'line',
@@ -56,7 +52,7 @@
 					newDate(6)
 				],
 				datasets: [{
-					label: "My First dataset",
+					label: 'My First dataset',
 					backgroundColor: color(window.chartColors.red).alpha(0.5).rgbString(),
 					borderColor: window.chartColors.red,
 					fill: false,
@@ -70,7 +66,7 @@
 						randomScalingFactor()
 					],
 				}, {
-					label: "My Second dataset",
+					label: 'My Second dataset',
 					backgroundColor: color(window.chartColors.blue).alpha(0.5).rgbString(),
 					borderColor: window.chartColors.blue,
 					fill: false,
@@ -84,7 +80,7 @@
 						randomScalingFactor()
 					],
 				}, {
-					label: "Dataset with point data",
+					label: 'Dataset with point data',
 					backgroundColor: color(window.chartColors.green).alpha(0.5).rgbString(),
 					borderColor: window.chartColors.green,
 					fill: false,
@@ -104,12 +100,12 @@
 				}]
 			},
 			options: {
-				title:{
-					text: "Chart.js Time Scale"
+				title: {
+					text: 'Chart.js Time Scale'
 				},
 				scales: {
 					xAxes: [{
-						type: "time",
+						type: 'time',
 						time: {
 							format: timeFormat,
 							// round: 'day'
@@ -119,7 +115,7 @@
 							display: true,
 							labelString: 'Date'
 						}
-					}, ],
+					}],
 					yAxes: [{
 						scaleLabel: {
 							display: true,
@@ -139,8 +135,8 @@
 						borderColor: 'black',
 						borderWidth: 5,
 						label: {
-							backgroundColor: "red",
-							content: "Test Label",
+							backgroundColor: 'red',
+							content: 'Test Label',
 							enabled: true
 						},
 						onClick: function(e) {
@@ -156,8 +152,8 @@
 						borderColor: 'black',
 						borderWidth: 5,
 						label: {
-							backgroundColor: "red",
-							content: "Test Label",
+							backgroundColor: 'red',
+							content: 'Test Label',
 							enabled: true
 						},
 						onClick: function(e) {
@@ -184,7 +180,7 @@
 		};
 
 		window.onload = function() {
-			var ctx = document.getElementById("canvas").getContext("2d");
+			var ctx = document.getElementById('canvas').getContext('2d');
 			window.myLine = new Chart(ctx, config);
 
 		};
@@ -206,7 +202,7 @@
 		var colorNames = Object.keys(window.chartColors);
 		document.getElementById('addDataset').addEventListener('click', function() {
 			var colorName = colorNames[config.data.datasets.length % colorNames.length];
-			var newColor = window.chartColors[colorName]
+			var newColor = window.chartColors[colorName];
 			var newDataset = {
 				label: 'Dataset ' + config.data.datasets.length,
 				borderColor: newColor,
@@ -227,7 +223,7 @@
 				config.data.labels.push(newDate(config.data.labels.length));
 
 				for (var index = 0; index < config.data.datasets.length; ++index) {
-					if (typeof config.data.datasets[index].data[0] === "object") {
+					if (typeof config.data.datasets[index].data[0] === 'object') {
 						config.data.datasets[index].data.push({
 							x: newDate(config.data.datasets[index].data.length),
 							y: randomScalingFactor(),
@@ -249,7 +245,7 @@
 		document.getElementById('removeData').addEventListener('click', function() {
 			config.data.labels.splice(-1, 1); // remove the label first
 
-			config.data.datasets.forEach(function(dataset, datasetIndex) {
+			config.data.datasets.forEach(function(dataset) {
 				dataset.data.pop();
 			});
 
