--- a/samples/updates.html
+++ b/samples/updates.html
@@ -31,7 +31,7 @@
 
 		var scatterChartData = {
 			datasets: [{
-				label: "My First dataset",
+				label: 'My First dataset',
 				data: [{
 					x: randomScalingFactor(),
 					y: randomScalingFactor(),
@@ -55,7 +55,7 @@
 					y: randomScalingFactor(),
 				}]
 			}, {
-				label: "My Second dataset",
+				label: 'My Second dataset',
 				data: [{
 					x: randomScalingFactor(),
 					y: randomScalingFactor(),
@@ -99,7 +99,7 @@
 		}];
 
 		window.onload = function() {
-			var ctx = document.getElementById("canvas").getContext("2d");
+			var ctx = document.getElementById('canvas').getContext('2d');
 			window.myScatter = Chart.Scatter(ctx, {
 				data: scatterChartData,
 				options: {
@@ -112,7 +112,7 @@
 							id: 'x-axis-1',
 							position: 'top',
 							gridLines: {
-								zeroLineColor: "rgba(0,255,0,1)"
+								zeroLineColor: 'rgba(0,255,0,1)'
 							},
 							scaleLabel: {
 								display: true,
@@ -127,7 +127,7 @@
 							id: 'y-axis-1',
 							position: 'right',
 							gridLines: {
-								zeroLineColor: "rgba(0,255,0,1)"
+								zeroLineColor: 'rgba(0,255,0,1)'
 							},
 							scaleLabel: {
 								display: true,
@@ -139,7 +139,7 @@
 						}]
 					},
 					annotation: {
-						drawTime: "afterDraw",
+						drawTime: 'afterDraw',
 						annotations: lines
 					}
 				}
