--- a/samples/bar.html
+++ b/samples/bar.html
@@ -25,6 +25,20 @@
 	<button id="addData">Add Data</button>
 	<button id="removeData">Remove Data</button>
 	<script>
+		window.chartColors = {
+			red: "rgb(255, 99, 132)",
+			orange: "rgb(255, 159, 64)",
+			yellow: "rgb(255, 205, 86)",
+			green: "rgb(75, 192, 192)",
+			blue: "rgb(54, 162, 235)",
+			purple: "rgb(153, 102, 255)",
+			grey: "rgb(201, 203, 207)"
+		};
+
+		var randomScalingFactor = function () {
+			return Math.round(Math.random() * 100);
+		};
+
 		var MONTHS = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'];
 		var color = Chart.helpers.color;
 		var barChartData = {
