--- a/samples/line-logarithmic.html
+++ b/samples/line-logarithmic.html
@@ -21,6 +21,20 @@
 	</div>
 	<button id="randomizeData">Randomize Data</button>
 	<script>
+	window.chartColors = {
+		red: "rgb(255, 99, 132)",
+		orange: "rgb(255, 159, 64)",
+		yellow: "rgb(255, 205, 86)",
+		green: "rgb(75, 192, 192)",
+		blue: "rgb(54, 162, 235)",
+		purple: "rgb(153, 102, 255)",
+		grey: "rgb(201, 203, 207)"
+	};
+
+	var randomScalingFactor = function () {
+		return Math.round(Math.random() * 100);
+	};
+	
 	var randomScalingFactor = function() {
 		return Math.ceil(Math.random() * 10.0) * Math.pow(10, Math.ceil(Math.random() * 5));
 	};
